# xy_grad_detection

./: .gitignore  CMakeLists.txt  grad_detection.cpp
functions/: .functions.cpp.swp  .functions.hpp.swp  CMakeLists.txt  functions.cpp  functions.hpp
